styles/signup.css
:root {
    --transTime: 100ms;
    --cyan: #29abe2;
    --orange: #ff8190;
}

body {
    height: 100dvh;
    min-height: 100dvh;
    width: 100dvw;
    max-width: 100dvw;
    font-family: "inter", sans-serif;
    direction: ltr;
    background-color: #f6f7f8;
    display: flex;
    justify-content: center;
    align-items: center;
}

.content__container {
    font-family: "inter", sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1440px;
    width: 100%;
    max-width: 100%;
    height: 100%;
    max-height: 100%;
    margin-left: auto;
    margin-right: auto;
}

.header {
    position: relative;
    height: 20%;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-content: flex-end;
}

.header__logo__container {
    position: absolute;
    top: 80px;
    left: 77px;
    z-index: 100;
}

.header__logo {
    width: 100px;
    height: 122px;
}

.signUp__footer {
    position: absolute;
    bottom: 16px;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 24px;
}

.signUp__footer a {
    color: #a8a8a8;
    font-weight: 400;
    font-size: 16px;
    line-height: 19.2px;
    padding-bottom: 40px;
    min-width: 123px;
    text-align: center;
}

.signUp__footer a:hover {
    color: var(--cyan);
    font-weight: 700;
}

.signUp__container {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 598px;
    height: 630px;
    border-radius: 30px;
    background-color: #ffffff;
    box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
}

.headline__container {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    align-self: center;
    width: clamp(240px, 90%, 422px);
}

.signUp__container h1 {
    width: 315px;
    height: 73px;
    font-weight: 700;
    font-size: 61px;
    line-height: 73.2px;
    text-align: center;
    margin-top: 48px;
}

.signUp__separator {
    width: 150px;
    height: 3px;
    margin-top: 14px;
    margin-bottom: 32px;
}

.signUp__nav {
    height: 49px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 35px;
    padding-top: calc(67px + 49px / 2);
    padding-right: 122px;
}

.signUp__nav p {
    width: 153px;
    font-weight: 400;
    font-size: 20px;
    line-height: 24px;
}

.signUp__signUp {
    color: white;
    width: 91px;
    height: 49px;
    font-weight: 700;
    font-size: 16px;
    line-height: 19.2px;
    padding: 15px;
    border-radius: 8px;
    background-color: #2a3647;
    transition: color var(--transTime) ease-in-out, background-color var(--transTime) ease-in-out, box-shadow var(--transTime) ease-in-out;
}

.signUp__signUp:hover {
    color: #ffffff;
    background-color: var(--cyan);
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.signUp__form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.inputField__container {
    width: 422px;
    height: 48px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-radius: 10px;
    padding: 12px 21px 12px 21px;
    border: 1px solid #d1d1d1;
    cursor: pointer;
}

.inputField__container-margin24 {
    margin-bottom: 24px;
}

.inputField__container input {
    border: none;
    outline: none;
    font-size: 20px;
    line-height: 24px;
    font-weight: 400;
    width: calc(422px - 21px);
    cursor: pointer;
}

.inputField__username__icon {
    width: 20px;
    height: 16px;
}

.inputField__password__icon {
    width: 16px;
    height: 21px;
}

.logIn__btn__container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 332px;
    height: 48px;
    gap: 35px;
}

.btn__signUp {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 21px;
    font-weight: 700;
    line-height: 25.2px;
    text-align: left;
    width: 126px;
    height: 55px;
    border: none;
    border-radius: 8px;
    color: #ffffff;
    background: #2a3647;
    cursor: pointer;
    padding: 15px 24px;
    margin-bottom: 48px;
    transition: color var(--transTime) ease-in-out, background-color var(--transTime) ease-in-out, box-shadow var(--transTime) ease-in-out;
}

.btn__signUp:hover {
    color: #ffffff;
    background-color: var(--cyan);
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.check-box {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    color: #a8a8a8;
    margin-bottom: 32px;
    margin-top: 2rem;
}

.check-box img {
    width: 16px;
    height: 16px;
    cursor: pointer;
}

.check-box img:hover {
    transform: scale(1.1);
    box-shadow: inset 0px 0px 6px 1px rgba(0, 0, 0, 0.2), 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
    border-radius: 2px;
}

.check-box p {
    width: 110px;
    height: 19px;
    font-weight: 400;
    font-size: 16px;
    line-height: 22px;
    text-align: center;
    color: #000000;
}

.check-box div {
    display: flex;
}

.signUp__privacyPolicy {
    color: var(--cyan);
}

.goback {
    position: absolute;
    top: 50%;
    left: 5%;
    cursor: pointer;
}

.btn__disabled {
    cursor: default;
    background-color: #a8a8a8 !important;
    box-shadow: none !important;
}

.pointerEvents__none {
    pointer-events: none;
}

.visible__no {
    width: 21.65px;
    height: 18.95px;
}

.visible_yes {
    margin-bottom: 2px;
    width: 21.65px;
    height: 15px;
}

.signup__overlay__container {
    position: absolute;
    inset: 0 0 0 0;
    opacity: 1;
    background-color: transparent;
    animation: animation_overlay 1000ms ease-in-out 0ms forwards;
    z-index: 9999;
}

.signup__overlay__img {
    position: relative;
    top: 100%;
    left: 50%;
    height: 74px;
    width: 312px;
    background-image: url("../assets/img/icons_signup/successfully.png");
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center center;
    transform: translate(-50%, -50%);
    animation: animation_signup 750ms ease-in-out 0ms forwards;
}

@keyframes animation_overlay {
    to {
        background-color: #f6f7f8;
    }
}

@keyframes animation_signup {
    from {
        top: 100%;
        left: 50%;
    }

    to {
        top: 50%;
        left: 50%;
    }
}

.form__wrongPassword__container {
    width: clamp(240px, 422px, 90%);
    margin-top: 8px;
    height: 15.6px;
    content: none;
}

.form__wrongPassword__message {
    font-weight: 400;
    font-size: 13px;
    line-height: 15.6px;
    color: var(--orange);
}

.wrongPassword {
    border-color: var(--orange) !important;
}

.inputField__container:has(input:focus) {
    border-color: var(--cyan);
}

